@@ -29,6 +29,7 @@ import org.hl7.fhir.r5.conformance.profile.ProfileUtilities;
 import org.hl7.fhir.r5.conformance.profile.ProfileUtilities.SourcedChildDefinitions;
 import org.hl7.fhir.r5.context.ContextUtilities;
 import org.hl7.fhir.r5.context.IWorkerContext;
+import org.hl7.fhir.r5.elementmodel.ObjectConverter;
 import org.hl7.fhir.r5.fhirpath.ExpressionNode.CollectionStatus;
 import org.hl7.fhir.r5.fhirpath.ExpressionNode.Function;
 import org.hl7.fhir.r5.fhirpath.ExpressionNode.Kind;
@@ -75,6 +76,7 @@ import org.hl7.fhir.utilities.MergedList.MergeNode;
 import org.hl7.fhir.utilities.SourceLocation;
 import org.hl7.fhir.utilities.Utilities;
 import org.hl7.fhir.utilities.VersionUtilities;
+import org.hl7.fhir.utilities.fhirpath.FHIRPathConstantEvaluationMode;
 import org.hl7.fhir.utilities.i18n.I18nConstants;
 import org.hl7.fhir.utilities.validation.ValidationOptions;
 import org.hl7.fhir.utilities.xhtml.NodeType;
@@ -170,7 +172,7 @@ public class FHIRPathEngine {
   private enum Equality { Null, True, False }
   
   private IWorkerContext worker;
-  private IEvaluationContext hostServices;
+  private IHostApplicationServices hostServices;
   private IDebugTracer tracer;
   private StringBuilder log = new StringBuilder();
   private Set<String> primitiveTypes = new HashSet<String>();
@@ -184,92 +186,17 @@ public class FHIRPathEngine {
   private boolean liquidMode; // in liquid mode, || terminates the expression and hands the parser back to the host
   private boolean doNotEnforceAsSingletonRule;
   private boolean doNotEnforceAsCaseSensitive;
+
+  /*
+   * The FHIRPath engine consults with the HostApplicationServices when an element fails to
+   * resolve, in case it's an implicit constant being referred to. it can also do that beforehand,
+   * in which case the constant will override any element of the given name. But it will only
+   * do that if CheckWithHostServicesBeforeHand is true
+   */
+  private boolean checkWithHostServicesBeforeHand;
   private boolean allowDoubleQuotes;
   private List<IssueMessage> typeWarnings = new ArrayList<>();
   private boolean emitSQLonFHIRWarning;
-
-  // if the fhir path expressions are allowed to use constants beyond those defined in the specification
-  // the application can implement them by providing a constant resolver 
-  public interface IEvaluationContext {
-
-    public abstract class FunctionDefinition {
-      public abstract String name();
-      public abstract FunctionDetails details();
-      public abstract TypeDetails check(FHIRPathEngine engine, Object appContext, TypeDetails focus, List<TypeDetails> parameters);
-      public abstract List<Base> execute(FHIRPathEngine engine, Object appContext, List<Base> focus, List<List<Base>> parameters);
-    }
-    
-    /**
-     * A constant reference - e.g. a reference to a name that must be resolved in context.
-     * The % will be removed from the constant name before this is invoked.
-     * Variables created with defineVariable will not be processed by resolveConstant (or resolveConstantType)
-     * 
-     * This will also be called if the host invokes the FluentPath engine with a context of null
-     *  
-     * @param appContext - content passed into the fluent path engine
-     * @param name - name reference to resolve
-     * @param beforeContext - whether this is being called before the name is resolved locally, or not
-     * @return the value of the reference (or null, if it's not valid, though can throw an exception if desired)
-     */
-    public List<Base> resolveConstant(FHIRPathEngine engine, Object appContext, String name, boolean beforeContext, boolean explicitConstant)  throws PathEngineException;
-    public TypeDetails resolveConstantType(FHIRPathEngine engine, Object appContext, String name, boolean explicitConstant) throws PathEngineException;
-
-    /**
-     * when the .log() function is called
-     * 
-     * @param argument
-     * @param focus
-     * @return
-     */
-    public boolean log(String argument, List<Base> focus);
-
-    // extensibility for functions
-    /**
-     * 
-     * @param functionName
-     * @return null if the function is not known
-     */
-    public FunctionDetails resolveFunction(FHIRPathEngine engine, String functionName);
-
-    /**
-     * Check the function parameters, and throw an error if they are incorrect, or return the type for the function
-     * @param functionName
-     * @param parameters
-     * @return
-     */
-    public TypeDetails checkFunction(FHIRPathEngine engine, Object appContext, String functionName, TypeDetails focus, List<TypeDetails> parameters) throws PathEngineException;
-
-    /**
-     * @param appContext
-     * @param functionName
-     * @param parameters
-     * @return
-     */
-    public List<Base> executeFunction(FHIRPathEngine engine, Object appContext, List<Base> focus, String functionName, List<List<Base>> parameters);
-
-    /**
-     * Implementation of resolve() function. Passed a string, return matching resource, if one is known - else null
-     * @appContext - passed in by the host to the FHIRPathEngine
-     * @param url the reference (Reference.reference or the value of the canonical
-     * @return
-     * @throws FHIRException 
-     */
-    public Base resolveReference(FHIRPathEngine engine, Object appContext, String url, Base refContext) throws FHIRException;
-
-    public boolean conformsToProfile(FHIRPathEngine engine, Object appContext, Base item, String url) throws FHIRException;
-
-    /* 
-     * return the value set referenced by the url, which has been used in memberOf()
-     */
-    public ValueSet resolveValueSet(FHIRPathEngine engine, Object appContext, String url);
-    
-    /**
-     * For the moment, there can only be one parameter if it's a type parameter 
-     * @param name
-     * @return true if it's a type parameter 
-     */
-    public boolean paramIsType(String name, int index);
-  }
 
   public interface IDebugTracer {
 
@@ -326,12 +253,12 @@ public class FHIRPathEngine {
   // if you don't override, it falls through to the using the base reference implementation 
   // HAPI overrides to these to support extending the base model
 
-  public IEvaluationContext getHostServices() {
+  public IHostApplicationServices getHostServices() {
     return hostServices;
   }
 
 
-  public void setHostServices(IEvaluationContext constantResolver) {
+  public void setHostServices(IHostApplicationServices constantResolver) {
     this.hostServices = constantResolver;
   }
 
@@ -432,7 +359,20 @@ public class FHIRPathEngine {
     this.doNotEnforceAsCaseSensitive = doNotEnforceAsCaseSensitive;
   }
 
-  // --- public API -------------------------------------------------------
+  /**
+   * The FHIRPath engine consults with the HostApplicationServices when an element fails to
+   * resolve, in case it's an implicit constant being referred to. it can also do that beforehand,
+   * in which case the constant will override any element of the given name. But it will only
+   * do that if checkWithHostServicesBeforeHand is true
+   */
+  public boolean isCheckWithHostServicesBeforeHand() {
+    return checkWithHostServicesBeforeHand;
+  }
+
+  public void setCheckWithHostServicesBeforeHand(boolean checkWithHostServicesBeforeHand) {
+    this.checkWithHostServicesBeforeHand = checkWithHostServicesBeforeHand;
+  }
+// --- public API -------------------------------------------------------
   /**
    * Parse a path for later use using execute
    * 
@@ -1004,15 +944,15 @@ public class FHIRPathEngine {
       return ((IIdType)item).getIdPart();
     } else if (item.isPrimitive()) {
       return item.primitiveValue();
-    } else if (item instanceof Quantity) {
-      Quantity q = (Quantity) item;
+    } else if (item.fhirType().equals("Quantity")) {
+      Quantity q = makeQuantity(item);
       if (q.hasUnit() && Utilities.existsInList(q.getUnit(), "year", "years", "month", "months", "week", "weeks", "day", "days", "hour", "hours", "minute", "minutes", "second", "seconds", "millisecond", "milliseconds")
           && (!q.hasSystem() || q.getSystem().equals("http://unitsofmeasure.org"))) {
-        return q.getValue().toPlainString()+" "+q.getUnit();
+        return (q.hasValue() ? q.getValue().toPlainString() : "")+" "+q.getUnit();
       }
-      if (q.getSystem().equals("http://unitsofmeasure.org")) {
+      if ("http://unitsofmeasure.org".equals(q.getSystem())) {
         String u = "'"+q.getCode()+"'";
-        return q.getValue().toPlainString()+" "+u;
+        return (q.hasValue() ? q.getValue().toPlainString() : "")+" "+u;
       } else {
         return item.toString();
       }
@@ -1215,6 +1155,7 @@ public class FHIRPathEngine {
         wrapper.setStart(lexer.getCurrentLocation().copy());
         lexer.setCurrent(lexer.getCurrent().substring(1));
       }
+      result.setEnd(lexer.getCurrentLocation().copy());
       result.setConstant(processConstant(lexer));
       result.setKind(Kind.Constant);
       if (!isString && !lexer.done() && (result.getConstant() instanceof IntegerType || result.getConstant() instanceof DecimalType) && (lexer.isStringConstant() || lexer.hasToken("year", "years", "month", "months", "week", "weeks", "day", "days", "hour", "hours", "minute", "minutes", "second", "seconds", "millisecond", "milliseconds"))) {
@@ -1242,11 +1183,11 @@ public class FHIRPathEngine {
             ucum = "ms";
           } 
         } else {
+          result.setEnd(lexer.getCurrentLocation().copy());
           ucum = lexer.readConstant("units");
         }
         result.setConstant(new Quantity().setValue(new BigDecimal(result.getConstant().primitiveValue())).setUnit(unit).setSystem(ucum == null ? null : "http://unitsofmeasure.org").setCode(ucum));
       }
-      result.setEnd(lexer.getCurrentStartLocation().copy());
     } else if ("(".equals(lexer.getCurrent())) {
       lexer.next();
       result.setKind(Kind.Group);
@@ -1261,11 +1202,12 @@ public class FHIRPathEngine {
         throw lexer.error("Found "+lexer.getCurrent()+" expecting a token name");
       }
       if (lexer.isFixedName()) {
+        result.setEnd(lexer.getCurrentLocation().copy());
         result.setName(lexer.readFixedName("Path Name"));
       } else {
+        result.setEnd(lexer.getCurrentLocation().copy());
         result.setName(lexer.take());
       }
-      result.setEnd(lexer.getCurrentStartLocation().copy());
       if (!result.checkName()) {
         throw lexer.error("Found "+result.getName()+" expecting a valid token name");
       }
@@ -1292,7 +1234,6 @@ public class FHIRPathEngine {
             throw lexer.error("The token "+lexer.getCurrent()+" is not expected here - either a \",\" or a \")\" expected");
           }
         }
-        result.setEnd(lexer.getCurrentLocation().copy());
         lexer.next();
         checkParameters(lexer, c, result, details);
       } else {
@@ -1301,14 +1242,16 @@ public class FHIRPathEngine {
     }
     ExpressionNode focus = result;
     if ("[".equals(lexer.getCurrent())) {
-      lexer.next();
       ExpressionNode item = new ExpressionNode(lexer.nextId());
       item.setKind(Kind.Function);
       item.setFunction(ExpressionNode.Function.Item);
+      item.setStart(lexer.getCurrentStartLocation().copy());
+      lexer.next();
       item.getParameters().add(parseExpression(lexer, true));
       if (!lexer.getCurrent().equals("]")) {
         throw lexer.error("The token "+lexer.getCurrent()+" is not expected here - a \"]\" expected");
       }
+      item.setEnd(lexer.getCurrentLocation().copy());
       lexer.next();
       result.setInner(item);
       focus = item;
@@ -1321,8 +1264,8 @@ public class FHIRPathEngine {
     if (proximal) {
       while (lexer.isOp()) {
         focus.setOperation(ExpressionNode.Operation.fromCode(lexer.getCurrent()));
-        focus.setOpStart(lexer.getCurrentStartLocation());
-        focus.setOpEnd(lexer.getCurrentLocation());
+        focus.setOpStart(lexer.getCurrentStartLocation().copy());
+        focus.setOpEnd(lexer.getCurrentLocation().copy());
         lexer.next();
         focus.setOpNext(parseExpression(lexer, false));
         focus = focus.getOpNext();
@@ -1549,14 +1492,14 @@ public class FHIRPathEngine {
     case ToInteger: return checkParamCount(lexer, location, exp, 0);
     case ToDecimal: return checkParamCount(lexer, location, exp, 0);
     case ToString: return checkParamCount(lexer, location, exp, 0);
-    case ToQuantity: return checkParamCount(lexer, location, exp, 0);
+    case ToQuantity: return checkParamCount(lexer, location, exp, 0); // this has an optional unit parameter
     case ToBoolean: return checkParamCount(lexer, location, exp, 0);
     case ToDateTime: return checkParamCount(lexer, location, exp, 0);
     case ToTime: return checkParamCount(lexer, location, exp, 0);
     case ConvertsToInteger: return checkParamCount(lexer, location, exp, 0);
     case ConvertsToDecimal: return checkParamCount(lexer, location, exp, 0);
     case ConvertsToString: return checkParamCount(lexer, location, exp, 0);
-    case ConvertsToQuantity: return checkParamCount(lexer, location, exp, 0);
+    case ConvertsToQuantity: return checkParamCount(lexer, location, exp, 0); // this has an optional unit parameter
     case ConvertsToBoolean: return checkParamCount(lexer, location, exp, 0);
     case ConvertsToDateTime: return checkParamCount(lexer, location, exp, 0);
     case ConvertsToDate: return checkParamCount(lexer, location, exp, 0);
@@ -1573,6 +1516,7 @@ public class FHIRPathEngine {
     case Power:  return checkParamCount(lexer, location, exp, 1);
     case Truncate: return checkParamCount(lexer, location, exp, 0);
     case Sort: return checkParamCount(lexer, location, exp, 0, 10);
+    case Coalesce: return checkParamCount(lexer, location, exp, 1, Integer.MAX_VALUE); // un-bounded number of parameters
     case LowBoundary: return checkParamCount(lexer, location, exp, 0, 1);
     case HighBoundary: return checkParamCount(lexer, location, exp, 0, 1);
     case Precision: return checkParamCount(lexer, location, exp, 0);
@@ -1606,16 +1550,16 @@ public class FHIRPathEngine {
           }
         }     
       }
-      if (tracer != null) tracer.traceExpression(context, focus, work, exp);
+      traceExpression(focus, exp, context, work);
       break;
     case Function:
       List<Base> work2 = evaluateFunction(context, focus, exp);
       work.addAll(work2);
-      if (tracer != null) tracer.traceExpression(context, focus, work, exp);
+      traceExpression(focus, exp, context, work);
       break;
     case Constant:
-      work.addAll(resolveConstant(context, exp.getConstant(), false, exp, true));
-      if (tracer != null) tracer.traceExpression(context, focus, work, exp);
+      work.addAll(resolveConstant(context, exp.getConstant(), FHIRPathConstantEvaluationMode.EXPLICIT, exp));
+      traceExpression(focus, exp, context, work);
       break;
     case Group:
       work2 = execute(context, focus, exp.getGroup(), atEntry);
@@ -1639,17 +1583,22 @@ public class FHIRPathEngine {
         else if (last.getOperation() == Operation.Is || last.getOperation() == Operation.As) {
           work2 = executeTypeName(context, focus, next, false);
           work = operate(context, work, last.getOperation(), work2, last);
-          if (tracer != null) tracer.traceOperationExpression(context, focus, work, last);
+          if (tracer != null) { tracer.traceOperationExpression(context, focus, work, last); }
         } else {
           work2 = execute(context, focus, next, true);
           work = operate(context, work, last.getOperation(), work2, last);
-          if (tracer != null) tracer.traceOperationExpression(context, focus, work, last);
+          if (tracer != null) { tracer.traceOperationExpression(context, focus, work, last); }
         }
         last = next;
         next = next.getOpNext();
       }
     }
     return work;
+  }
+
+  private void traceExpression(List<Base> focus, ExpressionNode exp, ExecutionContext context, List<Base> work) {
+    if (tracer == null) { return; }
+    tracer.traceExpression(context, focus, work, exp);
   }
 
   private List<Base> executeTypeName(ExecutionContext context, List<Base> focus, ExpressionNode next, boolean atEntry) {
@@ -1686,6 +1635,19 @@ public class FHIRPathEngine {
     return res;
   }
 
+  public static Quantity makeQuantity(Base base) {
+    if (base == null) {
+      return null;
+    }
+    if (base instanceof Quantity) {
+      return (Quantity) base;
+    }
+    if (base instanceof org.hl7.fhir.r5.elementmodel.Element) {
+      return ObjectConverter.readAsQuantity((org.hl7.fhir.r5.elementmodel.Element) base);
+    }
+    return null;
+  }
+
   private List<Base> makeNull() {
     List<Base> res = new ArrayList<Base>();
     return res;
@@ -1707,7 +1669,7 @@ public class FHIRPathEngine {
       } else if (atEntry && exp.getName().equals("$index")) {
         result.addType(TypeDetails.FP_Integer);
       } else if (atEntry && focus == null) {
-        result.update(executeContextType(context, exp.getName(), exp, false));
+        result.update(executeContextType(context, exp.getName(), exp, FHIRPathConstantEvaluationMode.NOVALUE));
       } else {
         for (String s : focus.getTypes()) {
           result.update(executeType(s, exp, atEntry, focus, elementDependencies));
@@ -1731,7 +1693,7 @@ public class FHIRPathEngine {
       result.addType(TypeDetails.FP_Quantity);
       break;
     case Constant:
-      result.update(resolveConstantType(context, exp.getConstant(), exp, true));
+      result.update(resolveConstantType(context, exp.getConstant(), exp, FHIRPathConstantEvaluationMode.EXPLICIT));
       break;
     case Group:
       result.update(executeType(context, focus, exp.getGroup(), elementDependencies, atEntry, canBeNone, exp));
@@ -1774,7 +1736,7 @@ public class FHIRPathEngine {
       }
     }
   }
-  private List<Base> resolveConstant(ExecutionContext context, Base constant, boolean beforeContext, ExpressionNode expr, boolean explicitConstant) throws PathEngineException {
+  private List<Base> resolveConstant(ExecutionContext context, Base constant, FHIRPathConstantEvaluationMode mode, ExpressionNode expr) throws PathEngineException {
     if (constant == null) {
       return new ArrayList<Base>();
     }
@@ -1787,7 +1749,7 @@ public class FHIRPathEngine {
       if (context.hasDefinedVariable(varName)) {
         return context.getDefinedVariable(varName);
       }
-      return resolveConstant(context, c.getValue(), beforeContext, expr, explicitConstant);
+      return resolveConstant(context, c.getValue(), mode, expr);
     } else if (c.getValue().startsWith("@")) {
       return new ArrayList<Base>(Arrays.asList(processDateConstant(context.appInfo, c.getValue().substring(1), expr)));
     } else {
@@ -1873,7 +1835,7 @@ public class FHIRPathEngine {
     return false;
   }
 
-  private List<Base> resolveConstant(ExecutionContext context, String s, boolean beforeContext, ExpressionNode expr, boolean explicitConstant) throws PathEngineException {
+  private List<Base> resolveConstant(ExecutionContext context, String s, FHIRPathConstantEvaluationMode mode, ExpressionNode expr) throws PathEngineException {
     if (s.equals("%sct")) {
       return new ArrayList<Base>(Arrays.asList(new StringType("http://snomed.info/sct").noExtensions()));
     } else if (s.equals("%loinc")) {
@@ -1903,7 +1865,7 @@ public class FHIRPathEngine {
     } else if (hostServices == null) {
       throw makeException(expr, I18nConstants.FHIRPATH_UNKNOWN_CONSTANT, s);
     } else {
-      return hostServices.resolveConstant(this, context.appInfo, s.substring(1), beforeContext, explicitConstant);
+      return hostServices.resolveConstant(this, context.appInfo, mode == FHIRPathConstantEvaluationMode.EXPLICIT ? s.substring(1) : s, mode);
     }
   }
 
@@ -2064,15 +2026,29 @@ public class FHIRPathEngine {
       result.add(new BooleanType(false).noExtensions());
     else {
       String tn = convertToString(right);
-      if (left.get(0) instanceof org.hl7.fhir.r5.elementmodel.Element) {
-        result.add(new BooleanType(left.get(0).hasType(tn)).noExtensions());
-      } else if ((left.get(0) instanceof Element) && ((Element) left.get(0)).isDisallowExtensions()) {
-        result.add(new BooleanType(Utilities.capitalize(left.get(0).fhirType()).equals(tn) || ("System."+Utilities.capitalize(left.get(0).fhirType())).equals(tn)).noExtensions());
-      } else {
-        if (left.get(0).fhirType().equals(tn)) {
+      var leftValue = left.get(0);
+      var leftFhirType = leftValue.fhirType();
+      if (leftValue instanceof org.hl7.fhir.r5.elementmodel.Element) {
+        // Need to handle the fhir type inheritance here
+        if (leftFhirType.equals(tn)) {
           result.add(new BooleanType(true).noExtensions());
         } else {
-          StructureDefinition sd = worker.fetchTypeDefinition(left.get(0).fhirType());
+          StructureDefinition sd = worker.fetchTypeDefinition(leftFhirType);
+          while (sd != null) {
+            if (tn.equals(sd.getType())) {
+              return makeBoolean(true);
+            }
+            sd = worker.fetchResource(StructureDefinition.class, sd.getBaseDefinition(), sd);
+          }
+          return makeBoolean(false);
+        }      
+      } else if ((leftValue instanceof Element) && ((Element) leftValue).isDisallowExtensions()) {
+        result.add(new BooleanType(Utilities.capitalize(leftFhirType).equals(tn) || ("System."+Utilities.capitalize(leftFhirType)).equals(tn)).noExtensions());
+      } else {
+        if (leftFhirType.equals(tn)) {
+          result.add(new BooleanType(true).noExtensions());
+        } else {
+          StructureDefinition sd = worker.fetchTypeDefinition(leftFhirType);
           while (sd != null) {
             if (tn.equals(sd.getType())) {
               return makeBoolean(true);
@@ -2308,10 +2284,14 @@ public class FHIRPathEngine {
   }
 
   private Boolean doEquals(Base left, Base right) {
-    if (left instanceof Quantity && right instanceof Quantity) {
-      return qtyEqual((Quantity) left, (Quantity) right);
-    } else if (left.isDateTime() && right.isDateTime()) { 
-      return datesEqual(left.dateTimeValue(), right.dateTimeValue());
+    var lq = makeQuantity(left);
+    var rq = makeQuantity(right);
+    if (lq instanceof Quantity && rq instanceof Quantity) {
+      return qtyEqual(lq, rq);
+    } else if (left.hasType("date", "dateTime", "instant") && right.hasType("date", "dateTime", "instant")) { 
+      var leftDate = new DateTimeType(left.primitiveValue());
+      var rightDate = new DateTimeType(right.primitiveValue());
+      return datesEqual(leftDate, rightDate);
     } else if (left instanceof DecimalType || right instanceof DecimalType) { 
       return decEqual(left.primitiveValue(), right.primitiveValue());
     } else if (left.isPrimitive() && right.isPrimitive()) {
@@ -2322,8 +2302,10 @@ public class FHIRPathEngine {
   }
 
   private boolean doEquivalent(Base left, Base right) throws PathEngineException {
-    if (left instanceof Quantity && right instanceof Quantity) {
-      return qtyEquivalent((Quantity) left, (Quantity) right);
+    var lq = makeQuantity(left);
+    var rq = makeQuantity(right);
+    if (lq instanceof Quantity && rq instanceof Quantity) {
+      return qtyEquivalent(lq, rq);
     }
     if (left.hasType("integer") && right.hasType("integer")) {
       return doEquals(left, right);
@@ -2536,7 +2518,7 @@ public class FHIRPathEngine {
       if (l.hasType(FHIR_TYPES_STRING) && r.hasType(FHIR_TYPES_STRING)) { 
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) < 0);
       } else if ((l.hasType("integer") || l.hasType("decimal")) && (r.hasType("integer") || r.hasType("decimal"))) { 
-        return makeBoolean(new Double(l.primitiveValue()) < new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) < Double.valueOf(r.primitiveValue()));
       } else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant"))) {
         Integer i = compareDateTimeElements(l, r, false);
         if (i == null) {
@@ -2563,10 +2545,12 @@ public class FHIRPathEngine {
         if (worker.getUcumService() == null) {
           return makeBoolean(false);
         } else {
+          var lq = makeQuantity(left.get(0));
+          var rq = makeQuantity(right.get(0));
           List<Base> dl = new ArrayList<Base>();
-          dl.add(qtyToCanonicalDecimal((Quantity) left.get(0)));
+          dl.add(qtyToCanonicalDecimal(lq));
           List<Base> dr = new ArrayList<Base>();
-          dr.add(qtyToCanonicalDecimal((Quantity) right.get(0)));
+          dr.add(qtyToCanonicalDecimal(rq));
           return opLessThan(dl, dr, expr);
         }
       }
@@ -2583,7 +2567,7 @@ public class FHIRPathEngine {
       if (l.hasType(FHIR_TYPES_STRING) && r.hasType(FHIR_TYPES_STRING)) {
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) > 0);
       } else if ((l.hasType("integer", "decimal", "unsignedInt", "positiveInt")) && (r.hasType("integer", "decimal", "unsignedInt", "positiveInt"))) { 
-        return makeBoolean(new Double(l.primitiveValue()) > new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) > Double.valueOf(r.primitiveValue()));
       } else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant"))) {
         Integer i = compareDateTimeElements(l, r, false);
         if (i == null) {
@@ -2610,10 +2594,12 @@ public class FHIRPathEngine {
         if (worker.getUcumService() == null) {
           return makeBoolean(false);
         } else {
+          var lq = makeQuantity(left.get(0));
+          var rq = makeQuantity(right.get(0));
           List<Base> dl = new ArrayList<Base>();
-          dl.add(qtyToCanonicalDecimal((Quantity) left.get(0)));
+          dl.add(qtyToCanonicalDecimal(lq));
           List<Base> dr = new ArrayList<Base>();
-          dr.add(qtyToCanonicalDecimal((Quantity) right.get(0)));
+          dr.add(qtyToCanonicalDecimal(rq));
           return opGreater(dl, dr, expr);
         }
       }
@@ -2631,7 +2617,7 @@ public class FHIRPathEngine {
       if (l.hasType(FHIR_TYPES_STRING) && r.hasType(FHIR_TYPES_STRING)) { 
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) <= 0);
       } else if ((l.hasType("integer", "decimal", "unsignedInt", "positiveInt")) && (r.hasType("integer", "decimal", "unsignedInt", "positiveInt"))) { 
-        return makeBoolean(new Double(l.primitiveValue()) <= new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) <= Double.valueOf(r.primitiveValue()));
       } else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant"))) {
         Integer i = compareDateTimeElements(l, r, false);
         if (i == null) {
@@ -2660,10 +2646,12 @@ public class FHIRPathEngine {
         if (worker.getUcumService() == null) {
           return makeBoolean(false);
         } else {
+          var lq = makeQuantity(left.get(0));
+          var rq = makeQuantity(right.get(0));
           List<Base> dl = new ArrayList<Base>();
-          dl.add(qtyToCanonicalDecimal((Quantity) left.get(0)));
+          dl.add(qtyToCanonicalDecimal(lq));
           List<Base> dr = new ArrayList<Base>();
-          dr.add(qtyToCanonicalDecimal((Quantity) right.get(0)));
+          dr.add(qtyToCanonicalDecimal(rq));
           return opLessOrEqual(dl, dr, expr);
         }
       }
@@ -2681,7 +2669,7 @@ public class FHIRPathEngine {
       if (l.hasType(FHIR_TYPES_STRING) && r.hasType(FHIR_TYPES_STRING)) { 
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) >= 0);
       } else if ((l.hasType("integer", "decimal", "unsignedInt", "positiveInt")) && (r.hasType("integer", "decimal", "unsignedInt", "positiveInt"))) { 
-        return makeBoolean(new Double(l.primitiveValue()) >= new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) >= Double.valueOf(r.primitiveValue()));
       } else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant"))) {
         Integer i = compareDateTimeElements(l, r, false);
         if (i == null) {
@@ -2708,10 +2696,12 @@ public class FHIRPathEngine {
         if (worker.getUcumService() == null) {
           return makeBoolean(false);
         } else {
+          var lq = makeQuantity(left.get(0));
+          var rq = makeQuantity(right.get(0));
           List<Base> dl = new ArrayList<Base>();
-          dl.add(qtyToCanonicalDecimal((Quantity) left.get(0)));
+          dl.add(qtyToCanonicalDecimal(lq));
           List<Base> dr = new ArrayList<Base>();
-          dr.add(qtyToCanonicalDecimal((Quantity) right.get(0)));
+          dr.add(qtyToCanonicalDecimal(rq));
           return opGreaterOrEqual(dl, dr, expr);
         }
       }
@@ -2754,6 +2744,9 @@ public class FHIRPathEngine {
     if (right.size() == 0) { 
       return makeBoolean(false);
     }
+    if (left.size() > 1) {
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "in", convertToString(left));
+    }
     boolean ans = true;
     for (Base l : left) {
       boolean f = false;
@@ -2773,8 +2766,11 @@ public class FHIRPathEngine {
   }
 
   private List<Base> opContains(List<Base> left, List<Base> right, ExpressionNode expr) {
-    if (left.size() == 0 || right.size() == 0) { 
+    if (right.size() == 0) { 
       return new ArrayList<Base>();
+    }
+    if (left.size() == 0) { 
+      return makeBoolean(false);
     }
     boolean ans = true;
     for (Base r : right) {
@@ -2799,7 +2795,7 @@ public class FHIRPathEngine {
       return new ArrayList<Base>();
     }
     if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "+");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "+", convertToString(left));
     }
     if (!left.get(0).isPrimitive()) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "+", left.get(0).fhirType());
@@ -2807,7 +2803,7 @@ public class FHIRPathEngine {
     if (right.size() > 1) {
       throw makeExceptionPlural(right.size(), expr, I18nConstants.FHIRPATH_RIGHT_VALUE, "+");
     }
-    if (!right.get(0).isPrimitive() &&  !((left.get(0).isDateTime() || left.get(0).hasType("date", "dateTime", "instant") || "0".equals(left.get(0).primitiveValue()) || left.get(0).hasType("Quantity")) && right.get(0).hasType("Quantity"))) {
+    if (!right.get(0).isPrimitive() &&  !((left.get(0).isDateTime() || left.get(0).hasType("date", "dateTime", "instant", "time") || "0".equals(left.get(0).primitiveValue()) || left.get(0).hasType("Quantity")) && right.get(0).hasType("Quantity"))) {
       throw makeException(expr, I18nConstants.FHIRPATH_RIGHT_VALUE_WRONG_TYPE, "+", right.get(0).fhirType());
     }
 
@@ -2822,10 +2818,17 @@ public class FHIRPathEngine {
       result.add(new DecimalType(new BigDecimal(l.primitiveValue()).add(new BigDecimal(r.primitiveValue()))));
     } else if (l.hasType("date") && r.hasType("Quantity")) {
       DateType dl = l instanceof DateType ? (DateType) l : new DateType(l.primitiveValue()); 
-      result.add(dateAdd(dl, (Quantity) r, false, expr));
+      var rq = makeQuantity(r);
+      result.add(dateAdd(dl, rq, false, expr));
     } else if ((l.isDateTime() || l.hasType("dateTime") || l.hasType("instant")) && r.hasType("Quantity")) {
       DateTimeType dl = l instanceof DateTimeType ? (DateTimeType) l : new DateTimeType(l.primitiveValue()); 
-      result.add(dateAdd(dl, (Quantity) r, false, expr));
+      var rq = makeQuantity(r);
+      result.add(dateAdd(dl, rq, false, expr));
+    } else if (l.hasType("time") && r.hasType("Quantity")) {
+      TimeType dl = l instanceof TimeType ? (TimeType) l : new TimeType(l.primitiveValue()); 
+      var rq = makeQuantity(r);
+      var rdt = timeAdd(dl, rq, false, expr);
+      result.add(rdt); // we only want the time part
     } else {
       throw makeException(expr, I18nConstants.FHIRPATH_OP_INCOMPATIBLE, "+", left.get(0).fhirType(), right.get(0).fhirType());
     }
@@ -2873,6 +2876,49 @@ public class FHIRPathEngine {
     case "second": 
     case "s":
       result.add(Calendar.SECOND, value);
+      double decValue = negate ? 0 - q.getValue().doubleValue() : q.getValue().doubleValue();
+      decValue = decValue - value; // remove the integer part, so we can add it in milliseconds
+      int ms = (int) (decValue * 1000);
+      if (ms != 0) {
+        result.add(Calendar.MILLISECOND, ms);
+      }
+      break;
+    case "milliseconds": 
+    case "millisecond": 
+    case "ms": 
+      result.add(Calendar.MILLISECOND, value);
+      break;
+    default:
+      throw new PathEngineException(worker.formatMessage(I18nConstants.FHIRPATH_ARITHMETIC_UNIT, q.getCode()), I18nConstants.FHIRPATH_ARITHMETIC_UNIT, holder.getOpStart(), holder.toString());
+    }
+    return result;
+  }
+
+private TimeType timeAdd(TimeType d, Quantity q, boolean negate, ExpressionNode holder) {
+    TimeType result = (TimeType) d.copy();
+
+    int value = negate ? 0 - q.getValue().intValue() : q.getValue().intValue();
+    switch (q.hasCode() ? q.getCode() : q.getUnit()) {
+    case "hours": 
+    case "hour": 
+    case "h":
+      result.add(Calendar.HOUR, value);
+      break;
+    case "minutes": 
+    case "minute": 
+    case "min":
+      result.add(Calendar.MINUTE, value);
+      break;
+    case "seconds": 
+    case "second": 
+    case "s":
+      result.add(Calendar.SECOND, value);
+      double decValue = negate ? 0 - q.getValue().doubleValue() : q.getValue().doubleValue();
+      decValue = decValue - value; // remove the integer part, so we can add it in milliseconds
+      int ms = (int) (decValue * 1000);
+      if (ms != 0) {
+        result.add(Calendar.MILLISECOND, ms);
+      }
       break;
     case "milliseconds": 
     case "millisecond": 
@@ -2890,15 +2936,17 @@ public class FHIRPathEngine {
       return new ArrayList<Base>();
     }
     if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "*");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "*", convertToString(left));
     }
-    if (!left.get(0).isPrimitive() && !(left.get(0) instanceof Quantity)) {
+    var lq = makeQuantity(left.get(0));
+    if (!left.get(0).isPrimitive() && !(lq instanceof Quantity)) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "*", left.get(0).fhirType());
     }
+    var rq = makeQuantity(right.get(0));
     if (right.size() > 1) {
       throw makeExceptionPlural(right.size(), expr, I18nConstants.FHIRPATH_RIGHT_VALUE, "*");
     }
-    if (!right.get(0).isPrimitive() && !(right.get(0) instanceof Quantity)) {
+    if (!right.get(0).isPrimitive() && !(rq instanceof Quantity)) {
       throw makeException(expr, I18nConstants.FHIRPATH_RIGHT_VALUE_WRONG_TYPE, "*", right.get(0).fhirType());
     }
 
@@ -2910,9 +2958,9 @@ public class FHIRPathEngine {
       result.add(new IntegerType(Integer.parseInt(l.primitiveValue()) * Integer.parseInt(r.primitiveValue())));
     } else if (l.hasType("decimal", "integer") && r.hasType("decimal", "integer")) { 
       result.add(new DecimalType(new BigDecimal(l.primitiveValue()).multiply(new BigDecimal(r.primitiveValue()))));
-    } else if (l instanceof Quantity && r instanceof Quantity && worker.getUcumService() != null) {
-      Pair pl = qtyToPair((Quantity) l);
-      Pair pr = qtyToPair((Quantity) r);
+    } else if (lq instanceof Quantity && rq instanceof Quantity && worker.getUcumService() != null) {
+      Pair pl = qtyToPair(lq);
+      Pair pr = qtyToPair(rq);
       Pair p;
       try {
         p = worker.getUcumService().multiply(pl, pr);
@@ -2929,7 +2977,7 @@ public class FHIRPathEngine {
 
   private List<Base> opConcatenate(List<Base> left, List<Base> right, ExpressionNode expr) throws PathEngineException {
     if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "&");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "&", convertToString(left));
     }
     if (left.size() > 0 && !left.get(0).hasType(FHIR_TYPES_STRING)) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "&", left.get(0).fhirType());
@@ -3062,7 +3110,7 @@ public class FHIRPathEngine {
       return new ArrayList<Base>();
     }
     if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "-");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "-", convertToString(left));
     }
     if (!left.get(0).isPrimitive() && !left.get(0).hasType("Quantity")) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "-", left.get(0).fhirType());
@@ -3070,7 +3118,7 @@ public class FHIRPathEngine {
     if (right.size() > 1) {
       throw makeExceptionPlural(right.size(), expr, I18nConstants.FHIRPATH_RIGHT_VALUE, "-");
     }
-    if (!right.get(0).isPrimitive() &&  !((left.get(0).isDateTime() || left.get(0).hasType("date", "dateTime", "instant") || "0".equals(left.get(0).primitiveValue()) || left.get(0).hasType("Quantity")) && right.get(0).hasType("Quantity"))) {
+    if (!right.get(0).isPrimitive() &&  !((left.get(0).isDateTime() || left.get(0).hasType("date", "dateTime", "instant", "time") || "0".equals(left.get(0).primitiveValue()) || left.get(0).hasType("Quantity")) && right.get(0).hasType("Quantity"))) {
       throw makeException(expr, I18nConstants.FHIRPATH_RIGHT_VALUE_WRONG_TYPE, "-", right.get(0).fhirType());
     }
 
@@ -3085,15 +3133,19 @@ public class FHIRPathEngine {
     } else if (l.hasType("decimal", "integer", "Quantity") && r.hasType("Quantity")) { 
       String s = l.primitiveValue();
       if ("0".equals(s)) {
-        Quantity qty = (Quantity) r;
+        Quantity qty = makeQuantity(r);
         result.add(qty.copy().setValue(qty.getValue().abs()));
       }
     } else if (l.hasType("date") && r.hasType("Quantity")) {
       DateType dl = l instanceof DateType ? (DateType) l : new DateType(l.primitiveValue()); 
-      result.add(dateAdd(dl, (Quantity) r, true, expr));
+      result.add(dateAdd(dl, makeQuantity(r), true, expr));
     } else if ((l.isDateTime() || l.hasType("dateTime") || l.hasType("instant")) && r.hasType("Quantity")) {
       DateTimeType dl = l instanceof DateTimeType ? (DateTimeType) l : new DateTimeType(l.primitiveValue()); 
-      result.add(dateAdd(dl, (Quantity) r, true, expr));
+      result.add(dateAdd(dl, makeQuantity(r), true, expr));
+    } else if (l.hasType("time") && r.hasType("Quantity")) {
+      TimeType dl = l instanceof TimeType ? (TimeType) l : new TimeType(l.primitiveValue()); 
+      var rdt = timeAdd(dl, makeQuantity(r), true, expr);
+      result.add(rdt); // we only want the time part
     } else {
       throw makeException(expr, I18nConstants.FHIRPATH_OP_INCOMPATIBLE, "-", left.get(0).fhirType(), right.get(0).fhirType());
     }
@@ -3105,15 +3157,17 @@ public class FHIRPathEngine {
       return new ArrayList<Base>();
     }
     if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "/");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "/", convertToString(left));
     }
-    if (!left.get(0).isPrimitive() && !(left.get(0) instanceof Quantity)) {
+    var lq = makeQuantity(left.get(0));
+    if (!left.get(0).isPrimitive() && !(lq instanceof Quantity)) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "/", left.get(0).fhirType());
     }
     if (right.size() > 1) {
       throw makeExceptionPlural(right.size(), expr, I18nConstants.FHIRPATH_RIGHT_VALUE, "/");
     }
-    if (!right.get(0).isPrimitive() && !(right.get(0) instanceof Quantity)) {
+    var rq = makeQuantity(right.get(0));
+    if (!right.get(0).isPrimitive() && !(rq instanceof Quantity)) {
       throw makeException(expr, I18nConstants.FHIRPATH_RIGHT_VALUE_WRONG_TYPE, "/", right.get(0).fhirType());
     }
 
@@ -3130,9 +3184,9 @@ public class FHIRPathEngine {
       } catch (UcumException e) {
         // just return nothing
       }
-    } else if (l instanceof Quantity && r instanceof Quantity && worker.getUcumService() != null) {
-      Pair pl = qtyToPair((Quantity) l);
-      Pair pr = qtyToPair((Quantity) r);
+    } else if (lq instanceof Quantity && rq instanceof Quantity && worker.getUcumService() != null) {
+      Pair pl = qtyToPair(lq);
+      Pair pr = qtyToPair(rq);
       Pair p;
       try {
         p = worker.getUcumService().divideBy(pl, pr);
@@ -3151,15 +3205,15 @@ public class FHIRPathEngine {
       return new ArrayList<Base>();
     }
     if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "div");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "div", convertToString(left));
     }
-    if (!left.get(0).isPrimitive() && !(left.get(0) instanceof Quantity)) {
+    if (!left.get(0).isPrimitive()) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "div", left.get(0).fhirType());
     }
     if (right.size() > 1) {
       throw makeExceptionPlural(right.size(), expr, I18nConstants.FHIRPATH_RIGHT_VALUE, "div");
     }
-    if (!right.get(0).isPrimitive() && !(right.get(0) instanceof Quantity)) {
+    if (!right.get(0).isPrimitive()) {
       throw makeException(expr, I18nConstants.FHIRPATH_RIGHT_VALUE_WRONG_TYPE, "div", right.get(0).fhirType());
     }
 
@@ -3191,7 +3245,7 @@ public class FHIRPathEngine {
     if (left.size() == 0 || right.size() == 0) {
       return new ArrayList<Base>();
     } if (left.size() > 1) {
-      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "mod");
+      throw makeExceptionPlural(left.size(), expr, I18nConstants.FHIRPATH_LEFT_VALUE, "mod", convertToString(left));
     }
     if (!left.get(0).isPrimitive()) {
       throw makeException(expr, I18nConstants.FHIRPATH_LEFT_VALUE_WRONG_TYPE, "mod", left.get(0).fhirType());
@@ -3228,25 +3282,29 @@ public class FHIRPathEngine {
   }
 
 
-  private TypeDetails resolveConstantType(ExecutionTypeContext context, Base constant, ExpressionNode expr, boolean explicitConstant) throws PathEngineException {
+  private TypeDetails resolveConstantType(ExecutionTypeContext context, Base constant, ExpressionNode expr, FHIRPathConstantEvaluationMode mode) throws PathEngineException {
     if (constant instanceof BooleanType) { 
       return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_Boolean);
     } else if (constant instanceof IntegerType) {
       return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_Integer);
     } else if (constant instanceof DecimalType) {
       return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_Decimal);
-    } else if (constant instanceof Quantity) {
-      return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_Quantity);
     } else if (constant instanceof FHIRConstant) {
-      return resolveConstantType(context, ((FHIRConstant) constant).getValue(), expr, explicitConstant);
+      return resolveConstantType(context, ((FHIRConstant) constant).getValue(), expr, mode);
     } else if (constant == null) {
       return new TypeDetails(CollectionStatus.SINGLETON);      
-    } else {
-      return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_String);
+    } else 
+    {
+      var q = makeQuantity(constant);
+      if (q instanceof Quantity) {
+        return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_Quantity);
+      } else {
+        return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_String);
+      }
     }
   }
 
-  private TypeDetails resolveConstantType(ExecutionTypeContext context, String s, ExpressionNode expr, boolean explicitConstant) throws PathEngineException {
+  private TypeDetails resolveConstantType(ExecutionTypeContext context, String s, ExpressionNode expr, FHIRPathConstantEvaluationMode mode) throws PathEngineException {
     if (s.startsWith("@")) {
       if (s.startsWith("@T")) {
         return new TypeDetails(CollectionStatus.SINGLETON, TypeDetails.FP_Time);
@@ -3290,7 +3348,7 @@ public class FHIRPathEngine {
       String varName = s.substring(1);
       if (context.hasDefinedVariable(varName))
         return context.getDefinedVariable(varName);
-      TypeDetails v = hostServices.resolveConstantType(this, context.appInfo, s, explicitConstant);
+      TypeDetails v = hostServices.resolveConstantType(this, context.appInfo, mode == FHIRPathConstantEvaluationMode.EXPLICIT ? s.substring(1) : s, mode);
       if (v == null) {
         throw makeException(expr, I18nConstants.FHIRPATH_UNKNOWN_CONSTANT, s); 
       } else {
@@ -3300,10 +3358,10 @@ public class FHIRPathEngine {
   }
 
   private List<Base> execute(ExecutionContext context, Base item, ExpressionNode exp, boolean atEntry) throws FHIRException {
-    List<Base> result = new ArrayList<Base>(); 
-    if (atEntry && context.appInfo != null && hostServices != null) {
+    List<Base> result = new ArrayList<Base>();
+    if (atEntry && context.appInfo != null && hostServices != null && checkWithHostServicesBeforeHand) {
       // we'll see if the name matches a constant known by the context.
-      List<Base> temp = hostServices.resolveConstant(this, context.appInfo, exp.getName(), true, false);
+      List<Base> temp = hostServices.resolveConstant(this, context.appInfo, exp.getName(), FHIRPathConstantEvaluationMode.IMPLICIT_BEFORE);
       if (!temp.isEmpty()) {
         result.addAll(temp);
         return result;
@@ -3331,7 +3389,7 @@ public class FHIRPathEngine {
     if (atEntry && context.appInfo != null && hostServices != null && result.isEmpty()) {
       // well, we didn't get a match on the name - we'll see if the name matches a constant known by the context.
       // (if the name does match, and the user wants to get the constant value, they'll have to try harder...
-      result.addAll(hostServices.resolveConstant(this, context.appInfo, exp.getName(), false, false));
+      result.addAll(hostServices.resolveConstant(this, context.appInfo, exp.getName(), FHIRPathConstantEvaluationMode.IMPLICIT_AFTER));
     }
     return result;
   }	
@@ -3341,11 +3399,11 @@ public class FHIRPathEngine {
   }
 
 
-  private TypeDetails executeContextType(ExecutionTypeContext context, String name, ExpressionNode expr, boolean explicitConstant) throws PathEngineException, DefinitionException {
+  private TypeDetails executeContextType(ExecutionTypeContext context, String name, ExpressionNode expr, FHIRPathConstantEvaluationMode mode) throws PathEngineException, DefinitionException {
     if (hostServices == null) {
       throw makeException(expr, I18nConstants.FHIRPATH_HO_HOST_SERVICES, "Context Reference");
     }
-    return hostServices.resolveConstantType(this, context.appInfo, name, explicitConstant);
+    return hostServices.resolveConstantType(this, context.appInfo, name, mode);
   }
 
   private TypeDetails executeType(String type, ExpressionNode exp, boolean atEntry, TypeDetails focus, Set<ElementDefinition> elementDependencies) throws PathEngineException, DefinitionException {
@@ -3377,16 +3435,14 @@ public class FHIRPathEngine {
     return type.contains("#") ? "" : type.substring(type.lastIndexOf("/")+1);
   }
 
-
   private void evaluateParameters(ExecutionTypeContext context, TypeDetails focus, ExpressionNode exp, Set<ElementDefinition> elementDependencies, List<TypeDetails> paramTypes, boolean canBeNone) {
-    int i = 0;
-    for (ExpressionNode expr : exp.getParameters()) {
-      if (isExpressionParameter(exp, i)) {
-        paramTypes.add(executeType(changeThis(context, focus), focus, expr, elementDependencies, true, canBeNone, expr));
+    for (ExpressionNode exprParam : exp.getParameters()) {
+      if (hasExpressionParameter(exp)) {
+        var newContext = changeThis(context, focus);
+        paramTypes.add(executeType(newContext, newContext.thisItem, exprParam, elementDependencies, true, canBeNone, exp));
       } else {
-        paramTypes.add(executeType(context, context.thisItem, expr, elementDependencies, true, canBeNone, expr));
+        paramTypes.add(executeType(context, context.thisItem, exprParam, elementDependencies, true, canBeNone, exp));
       }
-      i++;
     }
   }
 
@@ -3799,6 +3855,14 @@ public class FHIRPathEngine {
     }
     case Sort :
       return new TypeDetails(CollectionStatus.ORDERED, focus.getTypes());       
+    case Coalesce : {
+      TypeDetails types = new TypeDetails(null);
+      checkParamTypes(exp, exp.getFunction().toCode(), paramTypes);
+      for (var t : paramTypes) {
+        types.update(t);
+      }
+      return types;
+    }
     case Truncate :
     case Floor : 
     case Ceiling : {
@@ -3921,19 +3985,20 @@ public class FHIRPathEngine {
     return !focus.hasType(tn);
   }
 
-  private boolean isExpressionParameter(ExpressionNode exp, int i) {
+  private boolean hasExpressionParameter(ExpressionNode exp) {
     if (exp.getFunction() == Function.Sort) {
       return true;
     }
-    
-    switch (i) {
-    case 0:
-      return exp.getFunction() == Function.Where || exp.getFunction() == Function.Exists || exp.getFunction() == Function.All || exp.getFunction() == Function.Select || exp.getFunction() == Function.Repeat || exp.getFunction() == Function.Aggregate;
-    case 1:
-      return exp.getFunction() == Function.Trace || exp.getFunction() == Function.DefineVariable;
-    default: 
-      return false;
+    if (exp.getFunction() == Function.Iif) {
+      return true;
     }
+    
+    if (exp.getFunction() == Function.Where || exp.getFunction() == Function.Exists || exp.getFunction() == Function.All || exp.getFunction() == Function.Select || exp.getFunction() == Function.Repeat || exp.getFunction() == Function.Aggregate)
+      return true;
+    Set<Function> functionsWithExpressionParameter = Set.of(Function.Trace, Function.DefineVariable);
+    if (functionsWithExpressionParameter.contains(exp.getFunction()))
+      return true;
+    return false;
   }
 
 
@@ -4131,6 +4196,7 @@ public class FHIRPathEngine {
     case Power : return funcPower(context, focus, exp); 
     case Truncate : return funcTruncate(context, focus, exp);
     case Sort : return funcSort(context, focus, exp);
+    case Coalesce: return funcCoalesce(context, focus, exp);
     case LowBoundary : return funcLowBoundary(context, focus, exp);
     case HighBoundary : return funcHighBoundary(context, focus, exp);
     case Precision : return funcPrecision(context, focus, exp);
@@ -4153,7 +4219,7 @@ public class FHIRPathEngine {
         }
       } else {
         for (ExpressionNode p : exp.getParameters()) {
-          params.add(execute(context, focus, p, true));
+          params.add(execute(context, baseToList(context.thisItem), p, true));
         }
       }
       return hostServices.executeFunction(this, context.appInfo, focus, exp.getName(), params);
@@ -4165,7 +4231,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcHasTemplateIdOf(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
     List<Base> result = new ArrayList<Base>();
-    List<Base> swb = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> swb = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String sw = convertToString(swb);
 
     StructureDefinition sd = this.worker.fetchResource(StructureDefinition.class, sw);
@@ -4211,6 +4277,9 @@ public class FHIRPathEngine {
   }
   
   private List<Base> funcSqrt(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "sqrt", focus.size());
     }
@@ -4231,6 +4300,9 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcAbs(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "abs", focus.size());
     }
@@ -4244,7 +4316,7 @@ public class FHIRPathEngine {
         // just return nothing
       }
     } else if (base.hasType("Quantity")) {
-      Quantity qty = (Quantity) base;
+      Quantity qty = makeQuantity(base);
       result.add(qty.copy().setValue(qty.getValue().abs()));
     } else {
       makeException(expr, I18nConstants.FHIRPATH_WRONG_PARAM_TYPE, "abs", "(focus)", base.fhirType(), "integer or decimal");
@@ -4254,6 +4326,9 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcCeiling(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "ceiling", focus.size());
     }
@@ -4272,6 +4347,9 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcFloor(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "floor", focus.size());
     }
@@ -4316,6 +4394,9 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcLn(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "ln", focus.size());
     }
@@ -4336,13 +4417,20 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcLog(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "log", focus.size());
     }
     Base base = focus.get(0);
     List<Base> result = new ArrayList<Base>();
     if (base.hasType("integer", "decimal", "unsignedInt", "positiveInt")) {
-      List<Base> n1 = execute(context, focus, expr.getParameters().get(0), true);
+      List<Base> n1 = execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true);
+      if (n1.size() == 0) {
+        // no base, so we just return nothing (as per the spec)
+        return new ArrayList<Base>();
+      }
       if (n1.size() != 1) {
         throw makeException(expr, I18nConstants.FHIRPATH_WRONG_PARAM_TYPE, "log", "0", "Multiple Values", "integer or decimal");
       }
@@ -4364,13 +4452,20 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcPower(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "power", focus.size());
     }
     Base base = focus.get(0);
     List<Base> result = new ArrayList<Base>();
     if (base.hasType("integer", "decimal", "unsignedInt", "positiveInt")) {
-      List<Base> n1 = execute(context, focus, expr.getParameters().get(0), true);
+      List<Base> n1 = execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true);
+      if (n1.size() == 0) {
+        // no base, so we just return nothing (as per the spec)
+        return new ArrayList<Base>();
+      }
       if (n1.size() != 1) {
         throw makeException(expr, I18nConstants.FHIRPATH_WRONG_PARAM_TYPE, "power", "0", "Multiple Values", "integer or decimal");
       }
@@ -4388,6 +4483,9 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcTruncate(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "truncate", focus.size());
     }
@@ -4414,7 +4512,7 @@ public class FHIRPathEngine {
     }
     Integer precision = null;
     if (expr.getParameters().size() > 0) {
-      List<Base> n1 = execute(context, focus, expr.getParameters().get(0), true);
+      List<Base> n1 = execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true);
       if (n1.size() != 1) {
         throw makeException(expr, I18nConstants.FHIRPATH_WRONG_PARAM_TYPE, "lowBoundary", "0", "Multiple Values", "integer");
       }
@@ -4458,7 +4556,7 @@ public class FHIRPathEngine {
     }
     Integer precision = null;
     if (expr.getParameters().size() > 0) {
-      List<Base> n1 = execute(context, focus, expr.getParameters().get(0), true);
+      List<Base> n1 = execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true);
       if (n1.size() != 1) {
         throw makeException(expr, I18nConstants.FHIRPATH_WRONG_PARAM_TYPE, "lowBoundary", "0", "Multiple Values", "integer");
       }
@@ -4494,6 +4592,9 @@ public class FHIRPathEngine {
   }
   
   private List<Base> funcPrecision(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "highBoundary", focus.size());
     }
@@ -4512,6 +4613,9 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcRound(ExecutionContext context, List<Base> focus, ExpressionNode expr) {
+    if (focus.size() == 0) {
+      return new ArrayList<Base>();
+    }
     if (focus.size() != 1) {
       throw makeExceptionPlural(focus.size(), expr, I18nConstants.FHIRPATH_FOCUS, "round", focus.size());
     }
@@ -4520,7 +4624,7 @@ public class FHIRPathEngine {
     if (base.hasType("integer", "decimal", "unsignedInt", "positiveInt")) {
       int i = 0;
       if (expr.getParameters().size() == 1) {
-        List<Base> n1 = execute(context, focus, expr.getParameters().get(0), true);
+        List<Base> n1 = execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true);
         if (n1.size() != 1) {
           throw makeException(expr, I18nConstants.FHIRPATH_WRONG_PARAM_TYPE, "power", "0", "Multiple Values", "integer");
         }
@@ -4556,7 +4660,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcEncode(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String param = nl.get(0).primitiveValue();
 
     List<Base> result = new ArrayList<Base>();
@@ -4577,7 +4681,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcDecode(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String param = nl.get(0).primitiveValue();
 
     List<Base> result = new ArrayList<Base>();
@@ -4597,7 +4701,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcEscape(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String param = nl.get(0).primitiveValue();
 
     List<Base> result = new ArrayList<Base>();
@@ -4618,7 +4722,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcUnescape(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String param = nl.get(0).primitiveValue();
 
     List<Base> result = new ArrayList<Base>();
@@ -4648,7 +4752,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcSplit(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String param = nl.get(0).primitiveValue();
 
     List<Base> result = new ArrayList<Base>();
@@ -4663,14 +4767,14 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcJoin(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = exp.getParameters().size() > 0 ? execute(context, focus, exp.getParameters().get(0), true) : new ArrayList<Base>();
+    List<Base> nl = exp.getParameters().size() > 0 ? execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true) : new ArrayList<Base>();
     String param = "";
     String param2 = "";
     if (exp.getParameters().size() > 0) {
       param = nl.get(0).primitiveValue();
       param2 = param;
       if (exp.getParameters().size() == 2) {
-        nl = execute(context, focus, exp.getParameters().get(1), true);
+        nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(1), true);
         param2 = nl.get(0).primitiveValue();
       }
     }
@@ -4725,10 +4829,14 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcComparable(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
+    // Undocumented what this should do if the input collection is empty
+    // if (focus.size() == 0) {
+    //   return new ArrayList<Base>();
+    // }
     if (focus.size() != 1 || !(focus.get(0).fhirType().equals("Quantity"))) {
       return makeBoolean(false);          
     }
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     if (nl.size() != 1 || !(nl.get(0).fhirType().equals("Quantity"))) {
       return makeBoolean(false);          
     }
@@ -4902,7 +5010,7 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcMemberOf(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     if (nl.size() != 1 || focus.size() != 1) {
       return new ArrayList<Base>();
     }
@@ -4956,9 +5064,9 @@ public class FHIRPathEngine {
 
   private List<Base> funcReplace(ExecutionContext context, List<Base> focus, ExpressionNode expr) throws FHIRException, PathEngineException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> tB = execute(context, focus, expr.getParameters().get(0), true);
+    List<Base> tB = execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true);
     String t = convertToString(tB);
-    List<Base> rB = execute(context, focus, expr.getParameters().get(1), true);
+    List<Base> rB = execute(context, baseToList(context.thisItem), expr.getParameters().get(1), true);
     String r = convertToString(rB);
 
     if (focus.size() == 0 || tB.size() == 0 || rB.size() == 0) {
@@ -4982,9 +5090,9 @@ public class FHIRPathEngine {
 
   private List<Base> funcReplaceMatches(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> regexB = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> regexB = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String regex = convertToString(regexB);
-    List<Base> replB = execute(context, focus, exp.getParameters().get(1), true);
+    List<Base> replB = execute(context, baseToList(context.thisItem), exp.getParameters().get(1), true);
     String repl = convertToString(replB);
 
     if (focus.size() == 0 || regexB.size() == 0 || replB.size() == 0) {
@@ -5002,7 +5110,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcEndsWith(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> swb = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> swb = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String sw = convertToString(swb);
 
     if (focus.size() == 0) {
@@ -5066,10 +5174,12 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcToQuantity(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
+    // THIS DOESN'T APPEAR TO BE PROCESSING THE UNITS
     List<Base> result = new ArrayList<Base>();
     if (focus.size() == 1) {
-      if (focus.get(0) instanceof Quantity) {
-        result.add(focus.get(0));
+      var qty = makeQuantity(focus.get(0));
+      if (qty instanceof Quantity) {
+        result.add(qty);
       } else if (focus.get(0) instanceof StringType) {
         Quantity q = parseQuantityString(focus.get(0).primitiveValue());
         if (q != null) {
@@ -5133,7 +5243,7 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcTake(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
-    List<Base> n1 = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> n1 = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     int i1 = Integer.parseInt(n1.get(0).primitiveValue());
 
     List<Base> result = new ArrayList<Base>();
@@ -5184,7 +5294,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcExclude(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> other = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> other = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
 
     for (Base item : focus) {
       if (!doContains(other, item)) {
@@ -5446,7 +5556,7 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcSupersetOf(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
-    List<Base> target = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> target = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
 
     boolean valid = true;
     for (Base item : target) {
@@ -5469,7 +5579,7 @@ public class FHIRPathEngine {
 
 
   private List<Base> funcSubsetOf(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
-    List<Base> target = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> target = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
 
     boolean valid = true;
     for (Base item : focus) {
@@ -5561,7 +5671,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcExtension(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String url = nl.get(0).primitiveValue();
 
     for (Base item : focus) {
@@ -5719,10 +5829,10 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcTrace(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
-    List<Base> nl = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> nl = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String name = nl.get(0).primitiveValue();
     if (exp.getParameters().size() == 2) {
-      List<Base> n2 = execute(context, focus, exp.getParameters().get(1), true);
+      List<Base> n2 = execute(context, baseToList(context.thisItem), exp.getParameters().get(1), true);
       log(name, n2);
     } else { 
       log(name, focus);
@@ -5736,7 +5846,7 @@ public class FHIRPathEngine {
     List<Base> value;
     if (exp.getParameters().size() == 2) {
       value = execute(context, focus, exp.getParameters().get(1), true);
-    } else { 
+    } else {
       value = focus;
     }
     // stash the variable into the context
@@ -5780,7 +5890,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcMatches(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> swb = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> swb = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String sw = convertToString(swb);
 
     if (focus.size() == 0 || swb.size() == 0) {
@@ -5805,7 +5915,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcMatchesFull(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    String sw = convertToString(execute(context, focus, exp.getParameters().get(0), true));
+    String sw = convertToString(execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true));
 
     if (focus.size() == 1 && !Utilities.noString(sw)) {
       if (focus.get(0).hasType(FHIR_TYPES_STRING) || doImplicitStringConversion) {
@@ -5875,7 +5985,7 @@ public class FHIRPathEngine {
 
   private List<Base> funcStartsWith(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> swb = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> swb = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String sw = convertToString(swb);
 
     if (focus.size() == 0) {
@@ -5930,12 +6040,14 @@ public class FHIRPathEngine {
 
   private List<Base> funcIndexOf(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
+    if (focus.size() == 0) { 
+      // no result, and don't need to do anything (including evaluate the parameter)
+      return result;
+    }
 
-    List<Base> swb = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> swb = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     String sw = convertToString(swb);
-    if (focus.size() == 0) {
-      // no result
-    } else if (swb.size() == 0) {
+    if (swb.size() == 0) {
       // no result
     } else if (Utilities.noString(sw)) {
       result.add(new IntegerType(0).noExtensions());
@@ -5952,11 +6064,20 @@ public class FHIRPathEngine {
 
   private List<Base> funcSubstring(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    List<Base> n1 = execute(context, focus, exp.getParameters().get(0), true);
+    if (focus.size() == 0) {
+      // if there is no focus, then we don't need to do anything (including evaluate the parameter(s))
+      return result;
+    }
+
+    List<Base> n1 = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
+    if (n1.size() == 0) {
+      // the start parameter is not present, so return an empty list)
+      return result;
+    }
     int i1 = Integer.parseInt(n1.get(0).primitiveValue());
     int i2 = -1;
     if (exp.parameterCount() == 2) {
-      List<Base> n2 = execute(context, focus, exp.getParameters().get(1), true);
+      List<Base> n2 = execute(context, baseToList(context.thisItem), exp.getParameters().get(1), true);
       if (n2.isEmpty()|| !n2.get(0).isPrimitive() || !Utilities.isInteger(n2.get(0).primitiveValue())) {
         return new ArrayList<Base>();
       }
@@ -6066,7 +6187,7 @@ public class FHIRPathEngine {
     if (focus.size() != 1) {
       result.add(new BooleanType(false).noExtensions());
     } else {
-      String url = convertToString(execute(context, focus, expr.getParameters().get(0), true));
+      String url = convertToString(execute(context, baseToList(context.thisItem), expr.getParameters().get(0), true));
       result.add(new BooleanType(hostServices.conformsToProfile(this, context.appInfo,  focus.get(0), url)).noExtensions());
     }
     return result;
@@ -6100,6 +6221,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcIsQuantity(ExecutionContext context, List<Base> focus, ExpressionNode exp) {
+    // also not checking the optional parameter for units
     List<Base> result = new ArrayList<Base>();
     if (focus.size() != 1) {
       result.add(new BooleanType(false).noExtensions());
@@ -6107,7 +6229,7 @@ public class FHIRPathEngine {
       result.add(new BooleanType(true).noExtensions());
     } else if (focus.get(0) instanceof DecimalType) {
       result.add(new BooleanType(true).noExtensions());
-    } else if (focus.get(0) instanceof Quantity) {
+    } else if (makeQuantity(focus.get(0)) instanceof Quantity) {
       result.add(new BooleanType(true).noExtensions());
     } else if (focus.get(0) instanceof BooleanType) {
       result.add(new BooleanType(true).noExtensions());
@@ -6188,7 +6310,7 @@ public class FHIRPathEngine {
   }
 
   private List<Base> funcSkip(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
-    List<Base> n1 = execute(context, focus, exp.getParameters().get(0), true);
+    List<Base> n1 = execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true);
     int i1 = Integer.parseInt(n1.get(0).primitiveValue());
 
     List<Base> result = new ArrayList<Base>();
@@ -6362,10 +6484,23 @@ public class FHIRPathEngine {
     return result;
   }
 
+  private List<Base> funcCoalesce(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
+    // iterate over all the parameters, and return the first one that has a value
+    for (ExpressionNode p : exp.getParameters()) {
+      List<Base> pc = execute(context, focus, p, true);
+      if (pc.size() > 0) {
+        return pc;
+      }
+    }
+
+    // no result from any of the parameters, so return an empty list
+    List<Base> result = new ArrayList<Base>();
+    return result;
+  }
 
   private List<Base> funcItem(ExecutionContext context, List<Base> focus, ExpressionNode exp) throws FHIRException {
     List<Base> result = new ArrayList<Base>();
-    String s = convertToString(execute(context, focus, exp.getParameters().get(0), true));
+    String s = convertToString(execute(context, baseToList(context.thisItem), exp.getParameters().get(0), true));
     if (Utilities.isInteger(s) && Integer.parseInt(s) < focus.size()) {
       result.add(focus.get(Integer.parseInt(s)));
     } 
